@@ -25,7 +25,6 @@ package com.denimgroup.threadfix.importer.impl.remoteprovider.utils;
 
 import com.denimgroup.threadfix.logging.SanitizedLogger;
 import com.denimgroup.threadfix.service.ProxyService;
-import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.httpclient.HttpClient;
 import org.apache.commons.httpclient.HttpMethodBase;
 import org.apache.commons.httpclient.methods.GetMethod;
@@ -34,6 +33,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.context.support.SpringBeanAutowiringSupport;
 
 import javax.annotation.Nonnull;
+import javax.xml.bind.DatatypeConverter;
 import java.io.IOException;
 
 public class RemoteProviderHttpUtilsImpl<T> extends SpringBeanAutowiringSupport implements RemoteProviderHttpUtils {
@@ -65,7 +65,7 @@ public class RemoteProviderHttpUtilsImpl<T> extends SpringBeanAutowiringSupport 
             public void configure(HttpMethodBase method) {
                 if (username != null && password != null) {
                     String login = username + ":" + password;
-                    String encodedLogin = new String(Base64.encodeBase64(login.getBytes()));
+                    String encodedLogin = DatatypeConverter.printBase64Binary(login.getBytes());
                     method.setRequestHeader("Authorization", "Basic " + encodedLogin);
                 }
                 method.setRequestHeader("Content-type", "text/xml; charset=UTF-8");
